# sora2-watermark-remover

./: .gitattributes  .gitignore  README-en.md  README.md  app.py  build_desktop.py  desktop.py  example.py  pyproject.toml  requirements.txt  start_server.py  产品设计PRD.md  工程项目说明书.md  技术实现方案.md
datasets/: make_yolo_images.py
resources/: first_frame.json
sora2wm/: configs.py  core.py  watermark_detector.py  watermark_remover.py
sora2wm/iopaint/: __init__.py  api.py  batch_processing.py  benchmark.py  cli.py  const.py  download.py  helper.py  model_manager.py  runtime.py  schema.py  web_config.py
sora2wm/iopaint/model/: base.py  controlnet.py  fcf.py  instruct_pix2pix.py  kandinsky.py  lama.py  ldm.py  manga.py  mat.py  mi_gan.py  opencv2.py  paint_by_example.py  sd.py  sdxl.py  utils.py  zits.py
sora2wm/iopaint/plugins/: anime_seg.py  base_plugin.py  briarmbg2.py  gfpgan_plugin.py  interactive_seg.py  realesrgan.py  remove_bg.py  restoreformer.py
sora2wm/iopaint/tests/: test_adjust_mask.py  test_anytext.py  test_brushnet.py  test_controlnet.py  test_instruct_pix2pix.py  test_load_img.py  test_low_mem.py  test_match_histograms.py  test_model.py  test_model_md5.py  test_model_switch.py  test_outpainting.py  test_paint_by_example.py  test_plugins.py  test_save_exif.py  test_save_quality.py  test_sd_model.py  test_sdxl.py  utils.py
sora2wm/server/: app.py  db.py  lifespan.py  models.py  router.py  schemas.py  worker.py
sora2wm/utils/: devices_utils.py  download_utils.py  ffmpeg_utils.py  video_utils.py  watermark_utls.py
train/: eval.py
(+24 files in other folders)
